--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,1 +1,86 @@
-// TODO
+
+.logo {
+  width: 238.62px;
+  height: 25.63px;
+  margin-top: 80px;
+}
+
+.post {
+  width: 700px;
+  height: 108px;
+  margin-top: 3.989rem;
+
+  & + .post {
+    margin-top: 3rem;
+  }
+
+  a {
+
+    strong.title {
+      bottom: 68.52%;
+
+      font-family: 'Inter';
+      font-style: normal;
+      font-weight: 700;
+      font-size: 28px;
+      line-height: 34px;
+      /* identical to box height */
+
+      text-align: justify;
+      letter-spacing: -0.5px;
+    }
+
+    p.subtitle {
+      bottom: 68.52%;
+
+      font-family: 'Inter';
+      font-style: normal;
+      font-weight: 700;
+      font-size: 28px;
+      line-height: 34px;
+      /* identical to box height */
+
+      text-align: justify;
+    }
+
+    .info  {
+      display: flex;
+      flex-direction: row;
+      margin-top: 1.5rem;
+
+      time {
+        svg {
+          margin-right: 0.5rem;
+        }
+      }
+
+      p {
+        margin-left: 1.625rem;
+        svg {
+          margin-right: 0.5rem;
+        }
+      }
+    }
+
+  }
+
+}
+
+.loadMore {
+width: 11rem;
+height: 1.375rem;
+margin-top: 4rem;
+background: transparent;
+border: 0;
+
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 1.125rem;
+    line-height: 1.375rem;
+    /* identical to box height */
+    text-align: justify;
+    color: var(--highlight);
+
+
+}
