--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,1 +1,71 @@
-// TODO
+.banner{
+  width: 100vw;
+}
+
+.post {
+  width: 100%;
+  max-width: 45.063rem;
+  margin: 0 auto;
+  margin-top: 5rem;
+
+  .title {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 3rem;
+    line-height: 3.625rem;
+
+
+    letter-spacing: -0.5px;
+    color: var(--heading);
+  }
+
+  .info  {
+    display: flex;
+    flex-direction: row;
+    margin-top: 1.5rem;
+
+    time {
+      svg {
+        margin-right: 0.5rem;
+      }
+    }
+
+    p {
+      margin-left: 1.625rem;
+      svg {
+        margin-right: 0.5rem;
+      }
+    }
+  }
+.content {
+  width: 100%;
+  margin-top: 4rem;
+
+  .heading {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 2.25rem;
+    line-height: 140%;
+    text-align: justify;
+    color: var(--heading);
+  }
+
+  .heading:not(:first-of-type) {
+    margin-top: 4rem;
+  }
+
+  .body {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1.125rem;
+    line-height: 140%;
+    text-align: justify;
+    color: var(--body);
+    margin-top: 2.25rem;
+  }
+  }
+
+}
